--- a/entrega-02/index.html
+++ b/entrega-02/index.html
@@ -9,7 +9,11 @@
 <body>
      <h1>Búsqueda de usuarios</h1>
 
+    <ol id="list"> </ol>
+
      <div id="contador"></div>
+
+     <div id="boton"></div>
 
     <script src="./main.js"> </script>
 </body>
