--- a/entrega-03/index.html
+++ b/entrega-03/index.html
@@ -9,7 +9,7 @@
 <body>
      <h1>Búsqueda de usuarios</h1>
 
-    <ol id="list"> </ol>
+    <ul id="list"> </ul>
 
      <div id="contador"></div>
 
